cmake_minimum_required(VERSION 3.12)
project(redis-lite VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(Threads REQUIRED)
include_directories(${CMAKE_SOURCE_DIR}/include)
file(GLOB_RECURSE SOURCES src/*.cpp)
add_executable(redis-lite ${SOURCES})
target_link_libraries(redis-lite PRIVATE Threads::Threads)
install(TARGETS redis-lite DESTINATION bin)
